@@ -1,3 +1,8 @@
+2008-06-29  Don Porter  <dgp@users.sourceforge.net>
+
+	* generic/tclPathObj.c:  Plug memory leak in [Bug 1999176] fix. Thanks
+	to Rolf Ade for detecting.
+
 2008-06-29  Donal K. Fellows  <dkf@users.sf.net>
 
 	* doc/interp.n: Corrected order of subcommands. [Bug 2004256]
